syntax = "proto3";

package gRPCproto;

service GRPCservice {
	rpc RepeatString (RepeatStringRequest) returns (RepeatStringReply) {};
	rpc TimeoutPrint (TimeoutPrintRequest) returns (TimeoutPrintReply) {};
	rpc UploadImage (UploadImageRequest) returns (UploadImageReply) {}; 
	rpc DownloadImage (DownloadImageRequest) returns (stream DownloadImageResponse) {}; 
}

// Different types
message RepeatStringRequest {
	string str = 1;
	int32 num = 2;
}

message RepeatStringReply {
	string result = 1;
}

// Async func
message TimeoutPrintRequest {
	int32 index = 1;
	double secs = 2;
}

message TimeoutPrintReply {
	string result = 1;
}

// Image upload
message UploadImageRequest {
	string image = 1;
}

message UploadImageReply {
	string result = 1;
}

// Image Download
message DownloadImageRequest {}
message DownloadImageResponse {
	bytes image = 1;
}